Setup long lived api key access (#15)
* Add User API Key model

* WIP adding API Key create for user

* Added check for auth with API email & key
Added create API user API key
Updated swagger docs

* Added current user endpoint to allow access to current user with API GET to '/user'

* Update docs
