# api/models/auth.go
@@ -1,6 +1,8 @@
 package models
 
 import (
+	"time"
+
 	"gorm.io/gorm"
 )
 
@@ -22,6 +24,19 @@ type RegisterRequest struct {
 	Password    string `json:"password"`
 }
 
+// Type for the new API key request
+type NewAPIKeyRequest struct {
+	Email     string    `json:"email"`
+	Password  string    `json:"password"`
+	ExpiresOn time.Time `json:"expires_on"`
+}
+
+// Type for the new API key request
+type VerifyAPIKeyRequest struct {
+	Email string `json:"email"`
+	Key   string `json:"key"`
+}
+
 // Type for a user
 type User struct {
 	gorm.Model     `json:"-" swaggerignore:"true"`
@@ -30,4 +45,11 @@ type User struct {
 	Password       string `json:"password" gorm:"text;not null"`
 	FailedAttempts int    `json:"failed_attempts" gorm:"int;not null;default:0"`
 	Locked         bool   `json:"locked" gorm:"bool;not null;default:false"`
+}
+
+type UserAPIKey struct {
+	gorm.Model `json:"-" swaggerignore:"true"`
+	UserID     uint      `json:"user_id" gorm:"int;not null"`
+	Key        string    `json:"key" gorm:"text;not null;unique"`
+	ExpiresOn  time.Time `json:"expires_on" gorm:"timestamp;not null"`
 }
